# movie-box

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: demo.tape  make_social_preview.py
assets/recons2/: caption-episode.json  caption-movie.json
docs/: index.md  installation.md  miscellaneous.md  ui.md
docs-site/: index.html  vercel.json
docs/blog/: .authors.yml  index.md
docs/v1/: cli.md  introduction.md  movies.md  tv_series.md
docs/v1/examples/movie/: auto_movie.py  auto_movie_sync.py  download_movie_file.py  download_movie_file_sync.py  download_subtitle_file.py  download_subtitle_file_sync.py  download_with_progress_callback.py  download_with_progress_callback_sync.py  downloadable_movie_file_details.py  downloadable_movie_file_details_sync.py  movie_details_using_page_url.py  movie_details_using_page_url_sync.py  movie_details_using_search_results_item.py  movie_details_using_search_results_item_sync.py  search_movie.py  search_movie_sync.py
docs/v1/examples/tv_series/: download_subtitle_file.py  download_subtitle_file_sync.py  download_video_file.py  download_video_file_sync.py  downloadable_files_details.py  downloadable_files_details_sync.py  search_tv_series.py  (+5 more)
docs/v2/: cli.md  introduction.md
docs/v3/: cli.md  introduction.md
src/movie_box/: __init__.py  __main__.py  _compat.py  cli_errors.py  console.py  friendly_cli.py  streaming.py
src/movie_box/tui/: __init__.py  art.py  command_engine.py  splash.py  textual_app.py  theme.py
src/movie_box/v1/: __init__.py  _bases.py  constants.py  core.py  download.py  exceptions.py  helpers.py  models.py  requests.py  stream.py
src/movie_box/v2/: __init__.py  _bases.py  constants.py  core.py  download.py  exceptions.py  helpers.py  models.py  requests.py
src/movie_box/v3/: _bases.py  constants.py  core.py  crypto.py  download.py  exceptions.py  helpers.py  http_client.py  urls.py
tests/: test_browser_streaming.py  test_quick_cli_helpers.py  test_readme_contracts.py
tests/v1/: __init__.py
tests/v1/cli/: test_commands.py
tests/v1/core/: test_item_details.py  test_item_details_sync.py  test_others.py  test_others_sync.py  test_search.py  test_search_sync.py
tests/v1/download/: test_using_item_details _sync.py  test_using_item_details.py  test_using_search_results.py  test_using_search_results_sync.py
tests/v1/extractors/: __init__.py  test_json.py  test_model.py  test_tag.py
tests/v1/extras/: test_auto.py
tests/v2/: __init__.py
tests/v2/cli/: test_commands.py
tests/v2/core/: test_item_details.py  test_item_details_sync.py  test_others.py  test_others_sync.py  test_search.py  test_search_sync.py
tests/v2/download/: test_using_item_details.py  test_using_item_details_sync.py  test_using_search_results.py  test_using_search_results_sync.py
tests/v3/: test_download.py  test_download_captions.py
tests/v3/cli/: test_commands.py
tests/v3/core/: test_details.py  test_downloadables.py  test_homepage.py  test_search.py
(+25 files in other folders)
